Changes: typo- and plurals-fixes all over

--- a/CHANGES-3.3
+++ b/CHANGES-3.3
@@ -11,10 +11,11 @@ the history of the 3.2 series (2018-05 - 2022-08).
 
 This release contains contributions from (alphabetically by given name):
  - Adriaan de Groot
+ - Erik Dubois
  - vincent PENVERN
 
 ## Core ##
- - Nothing yet!
+ - Typo fixes in examples and documentation.
 
 ## Modules ##
  - The *keyboard* (and *keyboardq*) modules now support setting the live
@@ -139,7 +140,7 @@ This release contains contributions from (alphabetically by given name):
  - *partition* Module fixed unwanted behavior with the encryption checkbox. (thanks Aaron, #2376)
  - *umount* Correctly unmounts the root filesystem of the target. (thanks Evan)
  - *users* Supports a new `home_permissions` setting to override the
-   distro's `useradd` configuration of the umask. Supports octal and rwx-style
+   distribution's `useradd` configuration of the umask. Supports octal and rwx-style
    specifications of permissions. Other places that use permissions now also
    support octal and rwx-style. (#2362)
  - *welcome* Follows system styling colors (e.g. Dark Mode).
